--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
+    "react-native-uuid": "^2.0.2",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
